--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -560,6 +560,7 @@ hr.purp-line {
 
 /* End of Testing */
 
+/* Uncomment when certified 
 .logo-page {
     height: 50px;
 }
@@ -570,3 +571,5 @@ svg:not(:root) {
 [style="font-style:normal;font-weight:normal;font-size:40px;line-height:125%;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#9b59b6;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"] {
 	fill: var(--main-color) !important;
 }
+
+*/
