--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -508,7 +508,27 @@ hr.purp-line {
 #site-header .site-header-toprow {
     box-shadow: 0 1px transparent;
 }
-
+.ui.label.blue {
+    display: initial !important;
+    left: 0px;
+    top: 129px;
+    position: fixed;
+    z-index: 10;
+    font-size: 1rem;
+    padding: 11px;
+    border-radius: 0px 3px 3px 0px;
+    font-weight: 500;
+	transform: translateX(-6px); 
+	background-color: var(--main-color) !important;
+	border: 2px solid transparent !important;
+	transition: .2s all linear;
+}
+.ui.label.blue:hover {
+	background-color: transparent !important;
+	border: 2px solid var(--main-color) !important;
+	color: var(--main-color) !important;
+	transform: translateX(0px);
+}
 /* Testing */
 
 .bot-card {
