--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -187,9 +187,9 @@ img {
 	transition: .2s all linear;
 }
 .ui.google.plus.button:hover {
-	background: #121213;
-	border-color: #DD4B39;
-	color: #DD4B39;
+	background-color: #DD4B39;
+	border-color: #e26556;
+	color: #e26556;
 }
 .ui.labeled.icon.button:nth-child(1),
 .ui.labeled.icon.button:nth-child(2) {
@@ -646,4 +646,28 @@ svg:not(:root) {
 .bot-card::after {
     content: "";
     display: none;
+}
+.ui.google.plus.button[onclick*="location.href='/bot/353615282964791297/report'"] {
+    background-color: #DD4B39;
+    color: #FFF;
+    text-shadow: none;
+    box-shadow: 0 0 0 0 rgba(34, 36, 38, .15) inset;
+    border-radius: 50% !important;
+    font-size: 0px;
+    height: 56px;
+    width: 56px;
+    background-image: url(https://i.imgur.com/fJGuhhP.png);
+    background-repeat: no-repeat;
+    background-size: 45%;
+    background-position: center;
+	position: fixed;
+	bottom: 40px;
+	right: 40px;
+	z-index: 1000;
+	box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12), 0 3px 5px -1px rgba(0,0,0,0.2);
+}
+.ui.google.plus.button.ui.google.plus.button[onclick*="location.href='/bot/353615282964791297/report'"]:hover {
+    background: url(https://i.imgur.com/fJGuhhP.png) !important;
+	border-color: #e26556;
+	background-color: #e26556;
 }
