--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -673,3 +673,11 @@ svg:not(:root) {
     background-color: #e26556;
     box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
 }
+#upvotecounterprofile {
+z-index: 1;
+opacity: 1 !important;
+}
+#upvotebutton {
+z-index: -1;
+opacity: 1 !important;
+}
