--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -655,8 +655,8 @@ svg:not(:root) {
     box-shadow: 0 0 0 0 rgba(34, 36, 38, .15) inset;
     border-radius: 50% !important;
     font-size: 0px;
-    height: 56px;
-    width: 56px;
+    height: 56px !important;
+    width: 56px  !important;
     background-image: url(https://i.imgur.com/fJGuhhP.png);
     background-repeat: no-repeat;
     background-size: 45%;
