--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -1,5 +1,5 @@
 :root { 
-	--main-color: #da511d; /*This color is for halloween*/
+	--main-color: #d41b35; /*This color is for halloween*/
 }
 
 /* #9a58b5 <--- This is the default color*/
